# prism-btc

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/prism-btc/: Cargo.toml
crates/prism-btc-node/: Cargo.toml
crates/prism-btc-node/src/: lib.rs  session.rs
crates/prism-btc-node/tests/: regtest.rs
crates/prism-btc-primitives/: Cargo.toml
crates/prism-btc-primitives/src/: binding.rs  lib.rs  ops.rs  scalars.rs
crates/prism-btc-reduction/: Cargo.toml
crates/prism-btc-reduction/src/: certificate.rs  compile_unit.rs  convergence.rs  error.rs  hasher.rs  lib.rs  nonce_iter.rs  parallel.rs  serialize.rs  sha256d.rs  vectors.rs
crates/prism-btc-types/: Cargo.toml
crates/prism-btc-types/src/: assertions.rs  block_hash.rs  block_header.rs  lib.rs  merkle_root.rs  scalars.rs  tag.rs  target.rs  triadic.rs
crates/prism-btc-wasm/: Cargo.toml
crates/prism-btc-wasm/src/: api.rs  lib.rs  types.rs
crates/prism-btc-wasm/tests/: wasm.rs
crates/prism-btc/benches/: mining.rs
crates/prism-btc/src/: boundary_impls.rs  domain.rs  genesis.rs  lib.rs  mine.rs  mining_round.rs  model.rs  pipeline.rs  prelude.rs  serialize.rs  sha256d.rs  traits.rs
crates/prism-btc/src/ops/: audit.rs  header.rs  merkle.rs  mod.rs  omega.rs  sha256.rs  sigma.rs  term.rs  traversal.rs
crates/prism-btc/src/shapes/: bounds.rs  hasher.rs  mod.rs  prefix.rs  target_sub_bundle.rs
crates/prism-btc/tests/: integration.rs  triadic.rs
docs/adr/: ADR-024-multiplicity-integration.md  PRISM-BTC-MULTIPLICITY.md
prism-btc-lean/: PrismBtc.lean  lake-manifest.json  lakefile.lean
prism-btc-lean/PrismBtc/: ConvergenceProtocol.lean  FreeRankProtocol.lean  RingIdentity.lean  ShapeConstraint.lean  TriadicCoords.lean
