[workspace]
resolver = "2"
members = [
    "crates/prism-btc-types",
    "crates/prism-btc-reduction",
    "crates/prism-btc",
    "crates/prism-btc-wasm",
    "crates/prism-btc-node",
]

[workspace.dependencies]
uor-foundation = { version = "0.3.1" }
sha2           = { version = "0.10", default-features = false }
wasm-bindgen   = { version = "0.2" }
js-sys         = { version = "0.3" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true

[profile.test]
opt-level = 1
