[package]
name          = "prism-btc-primitives"
version       = "0.1.0"
edition       = "2021"
description   = "Bitcoin scalar primitives bound to the UOR ring vocabulary"
license       = "Apache-2.0"
repository    = "https://github.com/UOR-Foundation/prism-btc"
homepage      = "https://github.com/UOR-Foundation/prism-btc"
documentation = "https://docs.rs/prism-btc-primitives"
readme        = "../../README.md"
keywords      = ["bitcoin", "uor", "no-std", "ring", "primitives"]
categories    = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[dependencies]
uor-foundation = { workspace = true }

[features]
default = ["std"]
std     = []
