[package]
name          = "prism-btc-reduction"
version       = "0.1.0"
edition       = "2021"
description   = "σ-convergence loop and block certification for prism-btc"
license       = "Apache-2.0"
repository    = "https://github.com/UOR-Foundation/prism-btc"
homepage      = "https://github.com/UOR-Foundation/prism-btc"
documentation = "https://docs.rs/prism-btc-reduction"
readme        = "../../README.md"
keywords      = ["bitcoin", "uor", "mining", "certificate", "no-std"]
categories    = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[dependencies]
uor-foundation  = { workspace = true }
prism-btc-types = { path = "../prism-btc-types", version = "0.1.0" }
sha2            = { workspace = true }
rayon           = { version = "1.10", optional = true }

[features]
default  = ["std"]
std      = ["prism-btc-types/std"]
parallel = ["std", "dep:rayon"]
