[package]
name          = "prism-btc-types"
version       = "0.1.0"
edition       = "2021"
description   = "Bitcoin domain types as UOR-constrained ring elements"
license       = "Apache-2.0"
repository    = "https://github.com/UOR-Foundation/prism-btc"
homepage      = "https://github.com/UOR-Foundation/prism-btc"
documentation = "https://docs.rs/prism-btc-types"
readme        = "../../README.md"
keywords      = ["bitcoin", "uor", "block-hash", "target", "no-std"]
categories    = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[dependencies]
uor-foundation        = { workspace = true }
uor-foundation-macros = { workspace = true }
prism-btc-primitives  = { path = "../prism-btc-primitives", version = "0.1.0" }

[features]
default = ["std"]
std     = ["prism-btc-primitives/std"]
