[package]
name          = "prism-btc-types"
version       = "0.1.0"
edition       = "2021"
description   = "Bitcoin domain types as UOR-constrained ring elements"
license       = "Apache-2.0"
repository    = "https://github.com/UOR-Foundation/prism-btc"
homepage      = "https://github.com/UOR-Foundation/prism-btc"
documentation = "https://docs.rs/prism-btc-types"
readme        = "../../README.md"
keywords      = ["bitcoin", "uor", "block-hash", "target", "no-std"]
categories    = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[dependencies]
uor-foundation = { workspace = true }

[features]
default = ["std"]
std     = []
