[package]
name        = "prism-btc"
version     = "0.1.0"
edition     = "2021"
description = "Bitcoin mining as UOR shape-preserving morphism search"
license     = "Apache-2.0"
repository  = "https://github.com/UOR-Foundation/prism-btc"

[dependencies]
uor-foundation        = { workspace = true }
uor-foundation-macros = { workspace = true }
sha2                  = { workspace = true }
prism-btc-primitives  = { path = "../prism-btc-primitives" }
prism-btc-types       = { path = "../prism-btc-types" }
prism-btc-reduction   = { path = "../prism-btc-reduction" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "mining"
harness = false

[features]
default = ["std"]
std     = [
    "prism-btc-primitives/std",
    "prism-btc-types/std",
    "prism-btc-reduction/std",
]
