[package]
name          = "prism-btc"
version       = "0.1.0"
edition       = "2021"
description   = "Bitcoin mining as σ-convergence over the nonce fiber of the 32×W8 Datum space"
license       = "Apache-2.0"
repository    = "https://github.com/UOR-Foundation/prism-btc"
homepage      = "https://github.com/UOR-Foundation/prism-btc"
documentation = "https://docs.rs/prism-btc"
readme        = "../../README.md"
keywords      = ["bitcoin", "mining", "uor", "formal-verification", "no-std"]
categories    = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[dependencies]
uor-foundation        = { workspace = true }
uor-foundation-macros = { workspace = true }
sha2                  = { workspace = true }
prism-btc-primitives  = { path = "../prism-btc-primitives", version = "0.1.0" }
prism-btc-types       = { path = "../prism-btc-types", version = "0.1.0" }
prism-btc-reduction   = { path = "../prism-btc-reduction", version = "0.1.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "mining"
harness = false

[features]
default = ["std"]
std     = [
    "prism-btc-primitives/std",
    "prism-btc-types/std",
    "prism-btc-reduction/std",
]
