[package]
name          = "prism-btc"
version       = "0.1.0"
edition       = "2021"
description   = "Real-time structural inference for Bitcoin proof-of-work, as a Prism application of the UOR Foundation"
license       = "Apache-2.0"
repository    = "https://github.com/UOR-Foundation/prism-btc"
homepage      = "https://github.com/UOR-Foundation/prism-btc"
documentation = "https://docs.rs/prism-btc"
readme        = "../../README.md"
keywords      = ["bitcoin", "mining", "uor", "prism", "no-std"]
categories    = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[dependencies]
uor-foundation = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "mining"
harness = false

[features]
default = ["std"]
std     = []
